edits to Louis' notebooks

--- a/ngram_practice-checkpoint.ipynb
+++ b/ngram_practice-checkpoint.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "df0a3192-ff5d-4418-ba9c-f690cfbd3adf",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\HP\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /Users/brucesherin/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -84,7 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "id": "edb165c7-42fa-45ae-b021-17ff8fd27835",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# importing local .txt files to nltk\n",
+    "# f1 is r/A2C from 2021-2022\n",
+    "f1 = open(r'/Users/brucesherin/PycharmProjects/learning-trajectories/subreddits/a2c-2021-01-2022-01-output.txt', encoding = \"utf8\")\n",
+    "# f1 = open(r'C:\\Users\\HP\\prj\\bsherin\\learning-trajectories\\reddit-outputs\\a2c-2021-01-2022-01-output.txt', encoding = \"utf8\")\n",
+    "raw1 = f1.read()\n",
+    "# f2 is r/A2C from 2016-2017\n",
+    "f2 = open(r'/Users/brucesherin/PycharmProjects/learning-trajectories/subreddits/a2c-2016-01-2017-01-output.txt', encoding = \"utf8\")\n",
+    "# f2 = open(r'C:\\Users\\HP\\prj\\bsherin\\learning-trajectories\\reddit-outputs\\a2c-2016-01-2017-01-output.txt', encoding = \"utf8\")\n",
+    "raw2 = f2.read()\n",
+    "#f3 is "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "99872540-8c48-4198-aed9-7d3dbe88bc43",
    "metadata": {
     "tags": []
@@ -98,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "34337104-7b8b-418d-91f0-7c45b505a9db",
    "metadata": {
     "tags": []
@@ -119,7 +140,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "id": "247af3b4-7621-43d0-8dcf-2062526a2ea6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Bruce's version\n",
+    "# filters out digits, punctuation, links, and stopwords\n",
+    "# removing stopwords\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "pattern = r'\\b(?:' + '|'.join(map(re.escape, stop_words)) + r')\\b' # group the non special characters into a single string\n",
+    "def clean(sent):\n",
+    "    cleaned_sent_with_stopwords = re.sub(r'[^a-zA-Z\\s]|\\bhttps?\\S+\\b', '', sent)\n",
+    "    text_clean = re.sub(pattern, '', cleaned_sent_with_stopwords, flags = re.IGNORECASE)    \n",
+    "    return text_clean.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "e70a0a2d-424a-44f1-991a-02b82a51b565",
    "metadata": {
     "tags": []
@@ -140,22 +181,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "473915ee-b649-4474-b1a3-5cd7aa40fd5b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "747ea0f4-de86-463f-a318-617baeb285e5",
+   "metadata": {},
    "source": [
-    "# process text\n",
-    "sents1_cleaned = [clean(sentence) for sentence in split_add(sents1)]\n",
-    "# sents1_test = [clean(sentence) for sentence in split_add(sents1[0:50])] # CHANGE TO MAKE FULL DATASET"
+    "### Note\n",
+    "\n",
+    "The code below takes 70 seconds to run with Louis' version clean defined abov. With mine it takea bout 15 seconds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "id": "473915ee-b649-4474-b1a3-5cd7aa40fd5b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 70.29091191291809 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# process text\n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "sents1_cleaned = [clean(sentence) for sentence in split_add(sents1)]\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "# sents1_test = [clean(sentence) for sentence in split_add(sents1[0:50])] # CHANGE TO MAKE FULL DATASET"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e3f6e82-acbf-4383-a97a-7fd91ab86212",
+   "metadata": {},
+   "source": [
+    "## Note\n",
+    "How well does this tokenizer do?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "9e49e36a-12a6-4fa0-a457-e10f34cd91e6",
    "metadata": {
     "tags": []
@@ -169,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "40b4f179-c7c2-4e69-ba62-15184794acc4",
    "metadata": {
     "tags": []
@@ -182,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "a63c588e-ba81-4fea-b218-956a8f342701",
    "metadata": {
     "tags": []
@@ -198,8 +269,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4fe31e2c-80a1-4ebb-b357-08a815d2e690",
+   "metadata": {},
+   "source": [
+    "## Note\n",
+    "The below function recomputes the freqdist every time.\n",
+    "\n",
+    "Also it builds the freqdist from sents1_cleaned which isn't tokenized."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
+   "id": "b71443ca-041a-4ef5-a734-311ebf31a0db",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fdist = nltk.FreqDist(sents1_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "957fdfcd-1464-4e1e-b0aa-8f2ad9af670e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fdist.most_common(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "1ab9ae74-5682-4d95-aec0-95c34f201a8c",
    "metadata": {
     "tags": []
@@ -218,7 +324,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ce654f4-0976-446f-bf57-d237bad035da",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "sents1_split_with_unk = [replace_unknowns(sent, sents1_cleaned, 1) for sent in sents1_split]\n",
